[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viv"
version = "0.0.1"
authors = [
  { name="Umer", email="umerarshad1000@gmail.com" },
]
description = "simple package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/umer4350/check"
Issues = "https://github.com/umer4350/check/issues"

